<resources>
    <string name="app_name">倾听体语</string>
    <string name="indicator">健康指标</string>
    <string name="warning">预警指标</string>
    <string name="stationary_ecg">静态心电</string>
    <string name="active_mode">运动模式</string>
    <string name="community">运动社区</string>
    <string name="my">我的</string>
    <string name="age">生理年龄</string>
    <string name="start">开始</string>
    <string name="my_history">历史记录</string>
    <string name="my_report_plan">我的报告</string>
    <string name="health_plan">健康计划</string>
    <string name="following">我的关注</string>
    <string name="emergency_help">紧急求助</string>
    <string name="settings">系统设置</string>
    <string name="login">正在登录</string>
    <string name="verification_Code">验证码</string>
    <string name="user_agreement">用户协议</string>
    <string name="agree">同意</string>
    <string name="enter_cell_phone_number">请输入正确的手机号</string>
    <string name="input_validation_code">请输入验证码</string>
    <string name="code">获取验证码</string>
    <string name="non_consent_logon_protocol">未同意登录协议</string>
    <string name="getting_validation_code">正在获取验证码</string>
    <string name="verify_code_sent_successfully">验证码发送成功</string>
    <string name="login_successful_synchronizing_data">登陆成功，正在同步数据</string>
    <string name="login_was_successful">登录成功</string>
    <string name="now_improve_data">现在去完善资料吗?</string>
    <string name="network_exception">网络异常，请检查网络是否打开</string>
    <string name="complete">完成</string>
    <string name="Enter_nickname">选择昵称</string>
    <string name="Choose_birthday">选择生日</string>
    <string name="Choose_sex">选择性别</string>
    <string name="Choose_weight">选择体重</string>
    <string name="Choose_height">选择身高</string>
    <string name="Choose_address">选择地区</string>
    <string name="active">动态</string>
    <string name="querying">正在查询</string>
    <string name="rest">静态</string>
    <string name="analysised">已分析</string>
    <string name="not_synchronized">未同步</string>
    <string name="synced_data">同步数据</string>
    <string name="charging">设备充电</string>
    <string name="connected_guide1">设备连接至充电底座充电</string>
    <string name="connecteto_wifi">连接 WiFi</string>
    <string name="connecteto_wifi_name">WiFi 名称:  Amsu</string>
    <string name="connecteto_wifi_password">WiFi 密码:  0123456789</string>
    <string name="next_step">下一步</string>
    <string name="connect_immediately">马上连接</string>
    <string name="connectting_wifi_dialog">正在连接WiFi，请稍等</string>
    <string name="connectting_wifi_fail">WiFi连接失败，请重试 </string>
    <string name="connectted_socket_dialog">WiFi连接成功，正在创建socket连接</string>
    <string name="connected_check_offline_files">检查离线文件</string>
    <string name="connected_synced_offline_files">获取文件列表</string>
    <string name="exit_sure_offline_files">还有未分析的离线数据，确定要退出吗？</string>
    <string name="exit_confirm">确定</string>
    <string name="exit_cancel">取消</string>
    <string name="choose_sport_state">选择运动状态</string>
    <string name="insufficient_to_analyze">数据不足，无法分析</string>
    <string name="exercise_analyze">运动</string>
    <string name="hrv_analyze">HRV分析</string>
    <string name="hr_analyze">心率分析</string>
    <string name="ecg_analyze">心电分析</string>
    <string name="hrr_analyze">HRR分析</string>
    <string name="exercise_distance">里程(KM)</string>
    <string name="exercise_distance_">里程(km)</string>
    <string name="distance">里程</string>
    <string name="exercise_time">用时</string>
    <string name="exercise_heart_rate">心率</string>
    <string name="exercise_heart_ecg">心电</string>
    <string name="exercise_pace">配速</string>
    <string name="exercise_pace_unit">分钟/公里</string>
    <string name="exercise_speed">配速(分钟/公里)</string>
    <string name="exercise_speed_">配速(min/km)</string>
    <string name="exercise_calories">卡路里(Kcal)</string>
    <string name="exercise_calorie">卡路里</string>
    <string name="exercise_cadence">步频(步/分钟)</string>
    <string name="exercise_cadence_curve">步频曲线</string>
    <string name="exercise_steps_min">步频:(步/分钟)</string>
    <string name="steps_min">步/分钟</string>
    <string name="exercise_time_min">时间：分钟</string>
    <string name="exercise_calories_curve">卡路里曲线</string>
    <string name="exercise_calories_consumption">消耗:大卡</string>
    <string name="exercise_heart_rate_curve">心率曲线</string>
    <string name="exercise_heart_rate_beat">心率:次数</string>
    <string name="exercise_speed_curve">配速曲线</string>
    <string name="exercise_speed_minkm">配速:分钟/公里</string>
    <string name="exercise_steps_cardio">强度</string>
    <string name="exercise_cardio_curve">有氧无氧曲线</string>
    <string name="exercise_cardio">有氧无氧</string>
    <string name="exercise_flat">平缓</string>
    <string name="exercise_oxygenated">有氧</string>
    <string name="exercise_without_oxygen">无氧</string>
    <string name="exercise_in_danger">高危</string>
    <string name="hrv_physical_fatigue">运动疲劳</string>
    <string name="hrv_mental_fatigue">精神疲劳</string>
    <string name="hrv_mode">情绪指数</string>
    <string name="health_advice">健康意见</string>
    <string name="data_is_insufficient">数据不足，无法得出分析结果</string>
    <string name="data_is_nohrr">没有采集到恢复心率，请在跑步结束后按采集按钮进行采集</string>
    <string name="data_is_noecg">不存在心电数据 </string>
    <string name="hr_max">最大</string>
    <string name="hr_average">平均值</string>
    <string name="hrr_heart_rate_recovery">心率恢复能力</string>
    <string name="hrr_recovery_capability">以上数值为你当前的心率恢复值</string>
    <string name="monthly_report">月度报告</string>
    <string name="quarterly_report">季度报告</string>
    <string name="annual_report">年度报告</string>
    <string name="monthly_rate_report">月度心率报告</string>
    <string name="quarterly_rate_report">季度心率报告</string>
    <string name="annual_rate_report">年度心率报告</string>
    <string name="monthly_ecg_report">月度心电报告</string>
    <string name="quarterly_ecg_report">季度心电报告</string>
    <string name="annual_ecg_report">年度心电报告</string>
    <string name="monthly_hrr_report">月度HRR报告</string>
    <string name="quarterly_hrr_report">季度HRR报告</string>
    <string name="annual_hrr_report">年度HRR报告</string>
    <string name="loading">正在加载</string>
    <string name="normal">正常</string>
    <string name="nodata">无数据</string>
    <string name="abnormal">异常</string>
    <string name="cardiac_leak">漏博</string>
    <string name="premature_beat">早搏</string>
    <string name="times">次</string>
    <string name="new_health_plan">新建健康计划</string>
    <string name="enter_title">输入标题</string>
    <string name="enter_content">输入内容</string>
    <string name="choose_time">输入时间</string>
    <string name="save">保存</string>
    <string name="choose_data">选择日期</string>
    <string name="Health_plan_details">健康计划详情</string>
    <string name="modify">修改</string>
    <string name="add_emergency_contact">添加紧急联系人</string>
    <string name="help_information">求助信息</string>
    <string name="enter_help_information">输入求助信息</string>
    <string name="warn">警告</string>
    <string name="no_help_information_set">未设置求助信息，确定要退出吗？</string>
    <string name="my_profile">个人资料</string>
    <string name="my_devices">我的设备</string>
    <string name="survey">问卷调查</string>
    <string name="about_us">关于我们</string>
    <string name="exit">退出登录</string>
    <string name="update">检查更新</string>
    <string name="user_feedback">用户反馈</string>
    <string name="portrait">头像</string>
    <string name="nick_name">昵称</string>
    <string name="birthday">生日</string>
    <string name="gende">性别</string>
    <string name="weight">体重</string>
    <string name="height">身高</string>
    <string name="rest_heart_rate">静息心率</string>
    <string name="address">地址</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="national_region">国家/地区</string>
    <string name="choose_national_region">选择国家/地区</string>
    <string name="select_from_album">从相册中选择</string>
    <string name="take_a_picture">拍照</string>
    <string name="modify_nick_name">修改姓名</string>
    <string name="modify_gender">修改性别</string>
    <string name="modify_email">修改邮箱</string>
    <string name="modify_phone">修改手机</string>
    <string name="modify_rest_heart">修改静态心率</string>
    <string name="choose_birthday">选择生日</string>
    <string name="choose_weight">选择体重</string>
    <string name="choose_height">选择身高</string>
    <string name="choose_address">选择地址</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="add_new_device">添加新设备</string>
    <string name="searching_for_new_device">正在搜索设备</string>
    <string name="device_close_to_your_cell">请将设备尽量靠近手机</string>
    <string name="searching">正在搜索</string>
    <string name="The_clothe_is_binding">衣服正在绑定</string>
    <string name="The_insole_is_binding">鞋垫正在绑定</string>
    <string name="sure_you_want_to_switch">您已经绑定过衣服，确定要切换吗？</string>
    <string name="sure_you_want_to_switch_insole">您已经绑定过鞋垫，确定要切换吗？</string>
    <string name="click_bind">点击绑定</string>
    <string name="bindby_other">被别人绑定</string>
    <string name="bound">已绑定</string>
    <string name="unbound">解除绑定</string>
    <string name="unconnected">未连接</string>
    <string name="connected">已连接</string>
    <string name="device_information">设备信息</string>
    <string name="remaining_battery_power">剩余电量</string>
    <string name="device_name">设备名称</string>
    <string name="hardware_version">硬件版本号</string>
    <string name="software_version">软件版本号</string>
    <string name="sportswear">运动衣</string>
    <string name="insole">鞋垫</string>
    <string name="clothing_host_automatically_offline">是否允许衣服主机自动离线</string>
    <string name="clothing_host_automatically_offline_explain">允许时，主机和APP蓝牙断开并在10秒内无连接时，主机进入离线模式</string>
    <string name="connection_successful">设备连接成功</string>
    <string name="sportswear_connection_successful">运动衣连接成功</string>
    <string name="insole_connection_successful">鞋垫连接成功</string>
    <string name="sportswear_connection_disconnected">运动衣连接断开</string>
    <string name="insole_connection_disconnected">鞋垫连接断开</string>
    <string name="checking_version_information">正在查询版本信息</string>
    <string name="this_latest_version">当前已是最新版本</string>
    <string name="update_now">更新</string>
    <string name="update_later">稍后</string>
    <string name="find_new_version">发现新版本</string>
    <string name="company_info">阿木（深圳）新科技有限公司成立于2015年，专注于动态心电数据的准确捕捉和相关基础体征分析。为您的运动健康提供护航和科学指导！运动.健康，从"心"开始</string>
    <string name="company_right">阿木科技 版权所有</string>
    <string name="motion_detection">运动监测</string>
    <string name="ecg_graph">心电图</string>
    <string name="long_press_end">长按结束</string>
    <string name="lock">锁屏</string>
    <string name="glide_to_unlock">下滑解锁</string>
    <string name="running">正在跑步</string>
    <string name="motion_position">当前位置</string>
    <string name="current_heart_rate">当前心率</string>
    <string name="adjust">增益</string>
    <string name="analysis">分析</string>
    <string name="bunny_community">Bunny运动社区</string>
    <string name="bunny_community_decrible">旨在建设全国领先的运动社区，为运动爱好者提供一个专属的交流平台。发现志趣相投的运动爱好者。</string>
    <string name="running_type">跑步</string>
    <string name="swimming">游泳</string>
    <string name="cycling">骑行</string>
    <string name="marathon">马拉松</string>
    <string name="marathon_sport">马拉松运动</string>
    <string name="gym">健身</string>
    <string name="walking">步态</string>
    <string name="health_reserve">健康储备 </string>
    <string name="premature_beat_missed_beat">早搏/漏搏</string>
    <string name="too_fast_too_slow">过速/过缓</string>
    <string name="indicator_for_resistance_to_fatigue">抗疲劳指数</string>
    <string name="heart_rate_recovery">恢复心率</string>
    <string name="countdown">倒计时</string>
    <string name="endurance_distance">距离</string>
    <string name="endurance_des">耐力测试将采用12分钟倒计时跑的形式进行，\n请在开始后的12分钟内尽力冲刺更长的距离，\n计时结束后系统将会有语音提示。</string>
    <string name="endurance_time">时间</string>
    <string name="endurance_heart_rate">心率(bmp)</string>
    <string name="endurance_kilometer_">公里(km)</string>
    <string name="endurance_sport_speed">速度(km/h)</string>
    <string name="null_value">——</string>
</resources>