<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:divider="@drawable/deiver_horiz_line"
    android:showDividers="middle"
    android:background="#E8E8E8">

    <Button
        android:id="@+id/bt_dialog_choose"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/actionsheet_top_selector"
        android:gravity="center"
        android:text="@string/select_from_album"
        android:textSize="18sp" />
    <Button
        android:id="@+id/bt_dialog_take"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/actionsheet_top_selector"
        android:gravity="center"
        android:text="@string/take_a_picture"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bt_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/actionsheet_top_selector"
        android:gravity="center"
        android:text="@string/exit_cancel"
        android:textSize="18sp" />

</LinearLayout>