<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fff5f5f5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ffffffff"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x102"
                android:layout_marginTop="@dimen/x96"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sport_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_value"
                    android:textColor="@color/color_ff20262b"
                    android:textSize="@dimen/x112" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x24"
                    android:text="@string/exercise_distance_"
                    android:textColor="@color/color_ffb3b3b3"
                    android:textSize="@dimen/x36" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x102"
                android:layout_marginTop="@dimen/x96"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sport_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_value"
                    android:textColor="@color/color_ff20262b"
                    android:textSize="@dimen/x112" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x24"
                    android:text="@string/endurance_time"
                    android:textColor="@color/color_ffb3b3b3"
                    android:textSize="@dimen/x36" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sportDataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x48"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x36"
                android:text="@string/endurance_kilometer_"
                android:textColor="@color/color_ff999999"
                android:textSize="@dimen/x36" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x96"
                android:text="@string/exercise_speed_"
                android:textColor="@color/color_ff999999"
                android:textSize="@dimen/x36" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x76"
                android:text="@string/endurance_sport_speed"
                android:textColor="@color/color_ff999999"
                android:textSize="@dimen/x36" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x76"
                android:text="@string/endurance_heart_rate"
                android:textColor="@color/color_ff999999"
                android:textSize="@dimen/x36" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/aeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />


        <TextView
            android:id="@+id/hintTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x36"
            android:layout_marginRight="@dimen/x36"
            android:layout_marginTop="@dimen/x24"
            android:textColor="@color/color_ff999999" />
    </LinearLayout>

</LinearLayout>
