<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context="com.amsu.healthy.activity.LoginActivity">

    <include layout="@layout/page_head"
        android:id="@+id/rl_base_head">
    </include>

    <TextView
        android:id="@+id/tv_text_test1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_base_head"
        android:textSize="@dimen/x72"
        android:textColor="@color/app_main_color"
        android:text="@string/enter_cell_phone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x200"/>

    <LinearLayout
        android:id="@+id/ll_login_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/x36"
        android:paddingRight="@dimen/x36"
        android:layout_below="@id/tv_text_test1"
        android:layout_marginTop="@dimen/x120"
        android:divider="@drawable/deiver_horiz_line"
        android:showDividers="middle"
        android:background="#FFFFFF">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y140">
            <TextView
                android:id="@+id/tv_login_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x48"
                android:textColor="#333333"
                android:text="@string/phone"/>

            <TextView
                android:id="@+id/tv_login_regioncode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x48"
                android:textColor="#333333"
                android:layout_toRightOf="@+id/tv_login_text1"
                android:layout_marginLeft="@dimen/x120"
                android:text="+86"/>
            <EditText
                android:id="@+id/et_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/x36"
                android:singleLine="true"
                android:hint="@string/enter_cell_phone_number"
                android:layout_toRightOf="@+id/tv_login_regioncode"
                android:layout_marginLeft="@dimen/x10"
                android:textSize="@dimen/x48"
                android:textColor="#333333"
                android:background="@null"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y140">
            <TextView
                android:id="@+id/tv_login_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x48"
                android:textColor="#333333"
                android:text="@string/verification_Code"/>
            <EditText
                android:id="@+id/et_login_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x120"
                android:hint="@string/input_validation_code"
                android:singleLine="true"
                android:textColorHint="#ccccd2"
                android:textSize="@dimen/x48"
                android:background="@null"
                android:layout_toRightOf="@id/tv_login_text2"/>
            <Button
                android:id="@+id/bt_login_getcode"
                android:layout_width="@dimen/x228"
                android:layout_height="@dimen/x56"
                android:text="@string/code"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textSize="@dimen/x32"
                android:background="@drawable/bg_bt_rec_roundangle_white"
                android:textColor="#808080"
                android:onClick="getVerifyCode"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_login_aagree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_login_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y72">
        <CheckBox
            android:id="@+id/cb_login_isagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/x47"
            android:text="@string/agree"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="lookAsset"
            android:layout_toRightOf="@id/cb_login_isagree"
            android:layout_centerVertical="true"
            android:textColor="#0c64b5"
            android:textSize="@dimen/x47"
            android:text="@string/user_agreement"/>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login_nextstep"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x128"
        android:layout_marginLeft="@dimen/x36"
        android:layout_marginRight="@dimen/x36"
        android:layout_below="@id/rl_login_aagree"
        android:layout_marginTop="@dimen/y32"
        android:textColor="#f5f5f5"
        android:textSize="@dimen/x48"
        android:background="#c8c8c8"
        android:text="@string/login"
        android:onClick="login"/>

</RelativeLayout>
